--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -4,8 +4,20 @@
   <%= f.label :title %>
   <%= f.text_field :title %>
   <br />
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %>
+  <br />
+  <%= f.label :genre_id %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name, prompt: true%><br>
+  <br />
+  <%= f.label :notes_1 %>
+  <%= f.text_field :notes_1 %><br>
+  <br />
+  <%= f.label :notes_2 %>
+  <%= f.text_field :notes_2 %><br>
+  <br />
 
-  <%= f.submit %>
+  <%= f.submit 'commit'%>
 <% end %>
 
 
